--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sprite Image Display</title>
+  <title>Fruit Game</title>
   <style>
     canvas {
       border: 1px solid black;
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <canvas id="myCanvas" width="1000" height="700"></canvas>
+  <canvas id="myCanvas" width="1000" height="800"></canvas>
   <script src="script.js"></script>
 </body>
 </html>
